admin fixes